18_reverse_str/grade.txt
Grading at Mon Jul 15 18:58:34 UTC 2019
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:26:7: error: ‘p’ undeclared (first use in this function)
     *(p + len - 1 - i) = temp;
       ^
reverse.c:26:7: note: each undeclared identifier is reported only once for each function it appears in
The code did not compile!

Overall Grade: F
